61: complete 2.html:fix btn, fix item-box rate align

--- a/flask_project2023-week8-4/static/1~4style.css
+++ b/flask_project2023-week8-4/static/1~4style.css
@@ -181,14 +181,6 @@ th {
     width: 100%;
 }
 
-#filter input[type="submit"] {
-    background-color: var(--light-blue);
-    border: none;
-    border-radius: 5px;
-    width: 100pt;
-    color: white;
-    font-size: 9pt;
-}
 /*정렬*/
 #view-item .sorting{
     text-align: right;
@@ -324,6 +316,18 @@ th {
 }
 
 /*button*/
+#filter input[type="submit"]{
+    display: block;
+    position: relative;
+    height: 30px;
+    padding: 0;
+    font-weight: 600;
+    text-align: center;
+    line-height: 10px;
+    
+    border-radius: 5px;
+    transition: all 0.2s;
+}
 #order-btn{
     width: 80%;
     height: 40px;
